# cardano-testnet-baker

./: .gitignore  .hlint.yaml  CLAUDE.md  README.md  cabal.project  cardano-testnet-baker.cabal  flake.nix  justfile
.github/: dependabot.yml
.github/scripts/: check-action-runtimes.sh
.github/workflows/: ci.yml
.specify/memory/: constitution.md
app/: Main.hs
compose/acceptance/: docker-compose.yaml  patch-system-start.sh  run.sh
compose/acceptance/multi/: adapt.sh  docker-compose.yaml  run.sh
compose/acceptance/topology/: topology.json
docs/: seed-distribution.md
examples/scenarios/: antithesis-fast.json  antithesis-master.json  local-fast.json  normal.json
llm/reviews/10/: state.md
llm/reviews/12/: finalization.md  gate.sh  plan-review.md  state.md  tasks-review.md
nix/: checks.nix  iog-tools.nix  project.nix  seed-image.nix  seed-publish.nix  shell.nix
schemas/scenario/: v1.schema.json
scripts/: reproduce-15-drift.sh
specs/001-scenario-bake-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-scenario-bake-cli/checklists/: requirements.md
specs/001-scenario-bake-cli/contracts/: artifact-layout.md  cli.md  compose-acceptance.md  scenario-schema.md
specs/002-chaindb-synthesis/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-chaindb-synthesis/checklists/: requirements.md
specs/002-chaindb-synthesis/contracts/: artifact-layout.md  cli.md  compose-seed-acceptance.md  measurement-report.md  scenario-schema.md
specs/003-dressing-profile-substitution/: plan.md  spec.md  tasks.md
specs/003-seed-distribution/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-seed-distribution/checklists/: requirements.md
specs/003-seed-distribution/contracts/: artifact-identifier-scheme.md  consumer-copy-from.md  publish-pipeline.md  seed-image-layout.md
specs/015-synthesizer-nondeterminism/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/015-synthesizer-nondeterminism/checklists/: requirements.md
specs/015-synthesizer-nondeterminism/contracts/: determinism-harness.md  narrowing-rewrite.md  scenario-schema-migration.md
src/: CardanoTestnetBaker.hs
src/Cardano/Testnet/: Baker.hs
src/Cardano/Testnet/Baker/: Bake.hs  CLI.hs  Determinism.hs  Dress.hs  Genesis.hs  Keys.hs  Metadata.hs  Scenario.hs  Synthesis.hs  TextEnvelope.hs  Validation.hs  Version.hs
src/Cardano/Testnet/Baker/Dressing/: Layout.hs  Patch.hs  Profile.hs  Runtime.hs  Topology.hs
src/Cardano/Testnet/Baker/Dressing/Profiles/: AntithesisConfigurator.hs
src/CardanoTestnetBaker/: Version.hs
test/Cardano/Testnet/Baker/: BakeSpec.hs  CLISpec.hs  ComposeAcceptanceSpec.hs  DeterminismSpec.hs  KeysSpec.hs  MetadataSpec.hs  ScenarioSpec.hs  SynthesisSpec.hs  VersionSpec.hs
test/Cardano/Testnet/Baker/Dressing/: AntithesisConfiguratorSpec.hs  LayoutSpec.hs  PatchSpec.hs  ProfileSpec.hs  RuntimeSpec.hs  TopologySpec.hs
test/CardanoTestnetBaker/: VersionSpec.hs
test/data/: minimal-scenario.json
test/fixtures/dressing/antithesis-configurator/: README.md
test/fixtures/dressing/antithesis-configurator/p1/configs/: config.json  conway-genesis.json  topology.json
test/fixtures/dressing/antithesis-configurator/p2/configs/: shelley-genesis.json  topology.json
test/fixtures/dressing/antithesis-configurator/p3/configs/: alonzo-genesis.json  byron-genesis.json  topology.json
test/fixtures/dressing/bake-input/genesis/: alonzo-genesis.json  byron-genesis.json  config.json  shelley-genesis.json
