cabal-version:      3.0
name:               cardano-testnet-baker
version:            0.1.0.0
synopsis:           Deterministic Cardano testnet artifact baker.
description:
  Reads a declarative scenario JSON describing the network (initial
  stake, producers, faucets, era schedule, optional ChainDB
  synthesis) and produces a versioned, reproducible artifact set:
  genesis files, pool keys, faucet keys, and an optional synthesized
  ChainDB seed.

homepage:           https://github.com/lambdasistemi/cardano-testnet-baker
bug-reports:
  https://github.com/lambdasistemi/cardano-testnet-baker/issues

license:            Apache-2.0
license-file:       LICENSE
author:             Paolo Veronelli
maintainer:         paolo.veronelli@gmail.com
category:           Cardano
build-type:         Simple
extra-doc-files:    README.md
tested-with:        GHC ==9.12.3

common warnings
  ghc-options:
    -Wall -Wunused-imports -Wunused-packages -Wmissing-export-lists
    -Wname-shadowing -Wdeferred-out-of-scope-variables
    -Wpartial-type-signatures -Wredundant-constraints

common language
  default-language:   Haskell2010
  default-extensions:
    ImportQualifiedPost
    LambdaCase
    OverloadedStrings
    RecordWildCards
    StrictData

library
  import:           warnings, language
  hs-source-dirs:   src
  exposed-modules:
    Cardano.Testnet.Baker
    Cardano.Testnet.Baker.Version

  build-depends:    base >=4.18 && <5

executable cardano-testnet-baker
  import:           warnings, language
  hs-source-dirs:   app
  main-is:          Main.hs
  build-depends:
    , base                  >=4.18 && <5
    , cardano-testnet-baker
    , optparse-applicative

  ghc-options:      -threaded -rtsopts -with-rtsopts=-N

test-suite unit-tests
  import:           warnings, language
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  other-modules:    Cardano.Testnet.Baker.VersionSpec
  build-depends:
    , base                  >=4.18 && <5
    , cardano-testnet-baker
    , hspec

  build-tool-depends: hspec-discover:hspec-discover
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
